[package]
name = "flytile"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "cookies"] }
rocket = "0.5.1"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["sync"] }
zip = "2.2.2"
