[package]
name = "flytile"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
image = "0.25.5"
imageproc = "0.25.0"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["blocking", "cookies", "multipart", "json"] }
ringmap = "0.1.2"
rocket = "0.5.1"
serde = "1.0.217"
serde_json = "1.0.138"
tar = "0.4.43"
tempfile = "3.16.0"
time = { version = "0.3.37", features = ["macros", "formatting"] }
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1.41"
zip = "2.2.2"
